--- a/FundMon/Controls/FundAddModal.xaml
+++ b/FundMon/Controls/FundAddModal.xaml
@@ -32,14 +32,24 @@
             </Border.Shadow>
             <Grid
                 Margin="10"
-                RowDefinitions="Auto,Auto,Auto"
+                RowDefinitions="Auto,Auto,Auto,Auto"
                 RowSpacing="10">
-                <TextBox
-                    x:Name="SearchTextBox"
-                    Grid.Row="0"
-                    Header="Recherche"
-                    TextChanged="SearchTextBox_TextChanged" />
-                <GridView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}">
+                <Grid ColumnDefinitions="*,Auto">
+                    <TextBox
+                        x:Name="SearchTextBox"
+                        Grid.Column="0"
+                        PlaceholderText="Recherche"
+                        TextChanged="SearchTextBox_TextChanged" />
+                    <ProgressRing
+                        Grid.Column="1"
+                        Width="20"
+                        Height="20"
+                        IsActive="{x:Bind ViewModel.ISInProgress, Mode=OneWay}" />
+                </Grid>
+                <GridView
+                    Grid.Row="1"
+                    ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
+                    SelectedItem="{x:Bind ViewModel.SelectedLine, Mode=TwoWay}">
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="repo:MorningstarResponseLine">
                             <Grid
@@ -53,26 +63,31 @@
                                 <TextBlock
                                     Grid.Row="0"
                                     Style="{ThemeResource CaptionTextBlockStyle}"
-                                    Text="{x:Bind Name, Mode=OneWay}"
+                                    Text="{x:Bind Name}"
                                     TextWrapping="WrapWholeWords" />
                                 <TextBlock
                                     Grid.Row="1"
                                     Style="{ThemeResource CaptionTextBlockStyle}"
-                                    Text="{x:Bind Category, Mode=OneWay}"
+                                    Text="{x:Bind Category}"
                                     TextWrapping="WrapWholeWords" />
                             </Grid>
                         </DataTemplate>
                     </GridView.ItemTemplate>
                 </GridView>
-                <StackPanel
+                <TextBox
+                    x:Name="AverageCostTextBox"
                     Grid.Row="2"
+                    PlaceholderText="Coût moyen"
+                    TextChanged="AverageCostTextBox_TextChanged" />
+                <StackPanel
+                    Grid.Row="3"
                     Orientation="Horizontal"
                     Spacing="10">
                     <Button
                         x:Name="DoneButton"
                         Click="DoneButton_Click"
                         Content="Ajouter"
-                        IsEnabled="False"
+                        IsEnabled="{x:Bind ViewModel.HasValidValues, Mode=OneWay}"
                         Style="{ThemeResource AccentButtonStyle}" />
                     <Button
                         x:Name="EscapeButton"
