--- a/FundMon/Controls/FundAddModal.xaml
+++ b/FundMon/Controls/FundAddModal.xaml
@@ -16,7 +16,7 @@
         <KeyboardAccelerator Key="Escape" Invoked="EscapeKeyboardAccelerator_Invoked" />
     </UserControl.KeyboardAccelerators>
 
-    <Grid Visibility="{x:Bind VisualState, Mode=OneWay}">
+    <Grid Visibility="{x:Bind ViewModel.Visibility, Mode=OneWay}">
         <Rectangle Fill="{ThemeResource ButtonBackgroundThemeBrush}" Tapped="RectangleTapped" />
         <Border
             MinWidth="350"
@@ -32,22 +32,17 @@
             </Border.Shadow>
             <Grid
                 Margin="10"
-                RowDefinitions="Auto,Auto,Auto,Auto"
+                RowDefinitions="Auto,Auto,Auto,Auto,Auto"
                 RowSpacing="10">
-                <Grid ColumnDefinitions="*,Auto">
-                    <TextBox
-                        x:Name="SearchTextBox"
-                        Grid.Column="0"
-                        PlaceholderText="Recherche"
-                        TextChanged="SearchTextBox_TextChanged" />
-                    <ProgressRing
-                        Grid.Column="1"
-                        Width="20"
-                        Height="20"
-                        IsActive="{x:Bind ViewModel.ISInProgress, Mode=OneWay}" />
-                </Grid>
-                <GridView
+                <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="Ajout d'un fond" />
+                <TextBox
+                    x:Name="SearchTextBox"
                     Grid.Row="1"
+                    PlaceholderText="Recherche"
+                    TextChanged="SearchTextBox_TextChanged" />
+                <ProgressRing Grid.Row="2" IsActive="{x:Bind ViewModel.IsInProgress, Mode=OneWay}" />
+                <GridView
+                    Grid.Row="2"
                     ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
                     SelectedItem="{x:Bind ViewModel.SelectedLine, Mode=TwoWay}">
                     <GridView.ItemTemplate>
@@ -76,11 +71,11 @@
                 </GridView>
                 <TextBox
                     x:Name="AverageCostTextBox"
-                    Grid.Row="2"
+                    Grid.Row="3"
                     PlaceholderText="Coût moyen"
                     TextChanged="AverageCostTextBox_TextChanged" />
                 <StackPanel
-                    Grid.Row="3"
+                    Grid.Row="4"
                     Orientation="Horizontal"
                     Spacing="10">
                     <Button
