--- a/FundMon/Controls/FundAddModal.xaml
+++ b/FundMon/Controls/FundAddModal.xaml
@@ -31,18 +31,28 @@
                 <ThemeShadow />
             </Border.Shadow>
             <Grid
-                Margin="10"
+                Margin="0,0,0,10"
                 RowDefinitions="Auto,Auto,Auto,Auto,Auto"
                 RowSpacing="10">
-                <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="Ajout d'un fond" />
+                <Grid Padding="5" Background="{ThemeResource SystemAccentColorLight3}">
+                    <TextBlock
+                        Margin="5,0,0,0"
+                        Style="{ThemeResource SubtitleTextBlockStyle}"
+                        Text="Ajout d'un fond" />
+                </Grid>
                 <TextBox
                     x:Name="SearchTextBox"
                     Grid.Row="1"
+                    Margin="10,0,10,0"
                     PlaceholderText="Recherche"
                     TextChanged="SearchTextBox_TextChanged" />
-                <ProgressRing Grid.Row="2" IsActive="{x:Bind ViewModel.IsInProgress, Mode=OneWay}" />
+                <ProgressRing
+                    Grid.Row="2"
+                    Margin="10,0,10,0"
+                    IsActive="{x:Bind ViewModel.IsInProgress, Mode=OneWay}" />
                 <GridView
                     Grid.Row="2"
+                    Margin="10,0,10,0"
                     ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
                     SelectedItem="{x:Bind ViewModel.SelectedLine, Mode=TwoWay}">
                     <GridView.ItemTemplate>
@@ -72,10 +82,12 @@
                 <TextBox
                     x:Name="AverageCostTextBox"
                     Grid.Row="3"
+                    Margin="10,0,10,0"
                     PlaceholderText="Coût moyen"
                     TextChanged="AverageCostTextBox_TextChanged" />
                 <StackPanel
                     Grid.Row="4"
+                    Margin="10,0,10,0"
                     Orientation="Horizontal"
                     Spacing="10">
                     <Button
