--- a/FundMon/MainWindow.xaml
+++ b/FundMon/MainWindow.xaml
@@ -29,21 +29,11 @@
                 TextWrapping="NoWrap" />
         </StackPanel>
         <Frame x:Name="RootFrame" Grid.Row="1" />
-        <Grid
+        <InfoBar
+            Title="{x:Bind ViewModel.LastKind, Mode=OneWay}"
             Grid.Row="2"
-            Padding="2"
-            Background="{ThemeResource SystemAccentColorLight3}"
-            ColumnDefinitions="*,Auto"
-            ColumnSpacing="5">
-            <TextBlock
-                Grid.Column="0"
-                HorizontalAlignment="Right"
-                Style="{StaticResource CaptionTextBlockStyle}"
-                Text="{x:Bind ViewModel.LastLog, Mode=OneWay}" />
-            <FontIcon
-                Grid.Column="1"
-                FontFamily="Segoe Fluent Icons"
-                Glyph="&#xE788;" />
-        </Grid>
+            IsClosable="False"
+            IsOpen="{x:Bind ViewModel.IsOpen, Mode=OneWay}"
+            Message="{x:Bind ViewModel.LastLog, Mode=OneWay}" />
     </Grid>
 </Window>
